Fix img border default on IE

--- a/media/themes/adlibre/style.css
+++ b/media/themes/adlibre/style.css
@@ -9,6 +9,8 @@ html, body {
     height: 100%;
 }
 
+img { border: 0; }
+
 /* HTML Redefines */
 
 table				{
